3.0a3
	Fix --disable-drac and --disable-dnsrbl (Fabien Tassin)
3.0a2
	Documentation fix about required sendmail macros
	Missing bit in rc-redhat.sh (Jobst Schmalenbach)
	Fix bugs that prevented IPv6 addresses resolution
	Add more log output for blackist and flushaddr (Fabien Tassin)
	Allow rejecting by tempfail on blacklist configuration (Fabien Tassin)
3.0a1
	Build fix
2.1.12
	IPv6 fixes again (Hajimu UMEMOTO)
	Build fix on FreeBSD
	per-ACL SMTP error code and messages
2.1.11
	IPv6 fixes (Hajimu UMEMOTO)
	flushaddr flag for access lists, which flush an IP from the database
2.1.10
	Multi-line statement in the config file
	Fix crash when using -c and lists or acl
	Build fixes
2.1.9
	Handle FreeBSD 5.2 DNS resolver for DNSRBL (Hajimu UMEMOTO)
	Build fixes for Linux (Hajimu UMEMOTO)
	Fix uninitialized string (Hajimu UMEMOTO)
2.1.8
	acl blacklist feature
2.1.7
	Per-ACL greylisting and autowhitelisting delays
	DNSRBL support in ACL
	Report matching ACL line number in the logs
	Lists for from, rcpt, domain, netblocks and DNSRBL
2.1.6
	Make log output consistent (Fredrik Pettai)
2.1.5
	Build fix (Attila Bruncsak)
2.1.4
	Fixes to bucketed databases when using lazyaw (Ranko Zivojnovic)
	Tell local connexions are non IP instead of non IPv4 (Attila Bruncsak)
	Faster ACL code (Attila Bruncsak)
	Option to log expired entries (Jeff Rife)
	Cosmetic changes in debug logs (Fredrik Pettai)
2.1.3
	Build fix for IPv6 (Ranko Zivojnovic)
	Build on systems without IPv6 scope ID (Hajimu UMEMOTO)
2.1.2
	Missing SPF 2 bit (Hajimu UMEMOTO)
	Selectable MX sync source address (Guido Kerkewitz)
2.1.1
	Bucketed in-memory databases for better concurency (Ranko Zivojnovic)
	Large buffer for writing the dump file (Ranko Zivojnovic) 
	Option to disable human-readable date in dumps (Ranko Zivojnovic)
	Check for MXsync sends (Ranko Zivojnovic) 
	Better handle non fatal I/O errors in MXsync (Ranko Zivojnovic)
	Fix ACCESSDB whitelist with multiple recipients (Alexander Lobodzinski)