@@ -1,4 +1,4 @@
-/* $Id: list.c,v 1.7 2006/08/01 17:08:15 manu Exp $ */
+/* $Id: list.c,v 1.8 2006/08/27 16:02:26 manu Exp $ */
 
 /*
  * Copyright (c) 2006 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: list.c,v 1.7 2006/08/01 17:08:15 manu Exp $");
+__RCSID("$Id: list.c,v 1.8 2006/08/27 16:02:26 manu Exp $");
 #endif
 #endif
 
@@ -443,6 +443,21 @@ list_dnsrbl_filter(list,salen, sa)
 	return (le != NULL);
 }
 #endif
+
+int
+list_macro_filter(list, ctx)
+	struct all_list_entry *list;
+	SMFICTX *ctx;
+{
+	struct list_entry *le;
+
+	LIST_FOREACH(le, &list->al_head, l_list) {
+		if (macro_check(ctx, le->l_data.macro) == 1)
+			break;
+	}
+
+	return (le != NULL);
+}
 
 int
 list_from_filter(list, from)
